Bug 354306 - The files changed in Code perspective in the Review are closed after clicking "Finish review"
Summary: The files changed in Code perspective in the Review are closed after clicking...
Status: RESOLVED FIXED
Alias: None
Product: kdevplatform
Classification: Developer tools
Component: patchreview (other bugs)
Version First Reported In: git master
Platform: Mageia RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords:
: 354307 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-10-24 14:45 UTC by Piotr Mierzwinski
Modified: 2021-10-18 00:14 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Piotr Mierzwinski 2015-10-24 14:45:35 UTC
After changing the files in Code perspective, after saving them I call review the changes. When I finish review I call "Finish review" (pressing properly button on "Review" view). KDevelop returning to Code perspective closes all reviewed files.
Of course this is annoying situation because I need to open again all changed files.

Reproducible: Always

Steps to Reproduce:
1. Start KDevelop with some project (I'm working on this project: git://git.qtcmd.org/qtcmd2.git)
2. Open couple of files (let it be 5)
3. Change couple of files (let it be 3)
4. Save them (it's no matter, might be"Save all")
5. Invoke "git -> Show differences" for entire project (no matter how, for example clicking on root of project) .
    In this moment Review perspective is opening.
5. Invoke "Finish review"

Actual Results:  
Closed all changed files

Expected Results:  
All changed files should be opened in Code perspective after back from Review.

KDevelop cloned in the afternoon on 2015-10-24.
Comment 1 Aleix Pol 2015-10-26 00:11:30 UTC
Git commit ffcfa2507bcfc3554e67ea30dcf39f3b04ba7812 by Aleix Pol.
Committed on 26/10/2015 at 00:07.
Pushed by apol into branch '5.0'.

No need to close documents before changing the area

M  +1    -1    plugins/patchreview/patchreview.cpp

http://commits.kde.org/kdevplatform/ffcfa2507bcfc3554e67ea30dcf39f3b04ba7812
Comment 2 Aleix Pol 2015-10-26 00:11:42 UTC
*** Bug 354307 has been marked as a duplicate of this bug. ***