No need to close documents before changing the area

BUG: 354306